--- a/VisualSVN-Agent/VisualSVN-Agent.csproj
+++ b/VisualSVN-Agent/VisualSVN-Agent.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="utils\config.cs" />
     <Compile Include="utils\FileHelper.cs" />
+    <Compile Include="utils\FileWatcherHelper.cs" />
     <Compile Include="utils\LogHelper.cs" />
     <Compile Include="utils\UnixMd5CryptTool.cs" />
     <Compile Include="VirtualSVNHelper\SVNHelper.cs" />
