增加加密模块 配置文件增加 AccessKey <-> IV SecretKey <-> Key

--- a/VisualSVN-Agent/config.json
+++ b/VisualSVN-Agent/config.json
@@ -1,5 +1,11 @@
 ﻿{
   "Repositories": {
     "path": "C:\\Repositories"
+  },
+  "APIConfig": {
+    "APIurl": "http://127.0.0.1",
+    "AccessKey": "zxcvbnmdfrasdfgh",
+    "SecretKey": "dofkrfaosrdedofkrfaosrdedofkrfao"
   }
+
 }
