--- a/VisualSVN-Agent/VisualSVN-Agent.csproj
+++ b/VisualSVN-Agent/VisualSVN-Agent.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="utils\config.cs" />
+    <Compile Include="utils\EncryptsAndDecryptsHelper.cs" />
     <Compile Include="utils\FileHelper.cs" />
     <Compile Include="utils\FileWatcherHelper.cs" />
     <Compile Include="utils\LogHelper.cs" />
