发送到远端API的接口测试成功

--- a/VisualSVN-Agent/config.json
+++ b/VisualSVN-Agent/config.json
@@ -3,7 +3,7 @@
     "path": "C:\\Repositories"
   },
   "APIConfig": {
-    "APIurl": "http://127.0.0.1",
+    "APIurl": "http://192.168.72.60:5000/svn_agent",
     "AccessKey": "zxcvbnmdfrasdfgh",
     "SecretKey": "dofkrfaosrdedofkrfaosrdedofkrfao"
   }
