--- a/VisualSVN-Agent/VisualSVN-Agent.csproj
+++ b/VisualSVN-Agent/VisualSVN-Agent.csproj
@@ -69,6 +69,7 @@
     <Compile Include="utils\FileWatcherHelper.cs" />
     <Compile Include="utils\LogHelper.cs" />
     <Compile Include="utils\UnixMd5CryptTool.cs" />
+    <Compile Include="utils\WebFunctionHelper.cs" />
     <Compile Include="VirtualSVNHelper\SVNHelper.cs" />
   </ItemGroup>
   <ItemGroup>
