--- a/VisualSVN-Agent/packages.config
+++ b/VisualSVN-Agent/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="SharpSvn.1.9-x86" version="1.9004.3900.136" targetFramework="net452" />
 </packages>
