命令类型增加设定目录权限 配置文件增加 默认SVN账号密码 客户端ID识别 文件帮助类增加设定权限模块

--- a/VisualSVN-Agent/config.json
+++ b/VisualSVN-Agent/config.json
@@ -6,6 +6,11 @@
     "APIurl": "http://192.168.72.60:5000/svn_agent",
     "IV": "zxcvbnmdfrasdfgh",
     "SecretKey": "dofkrfaosrdedofkrfaosrdedofkrfao"
+  },
+  "ID": "test",
+  "SVNAccount": {
+    "UserName": "",
+    "Password": ""
   }
 
 }
