修正多个BUG问题
增加请求命令的发送内容
增加SVN前缀以及机器识别ID

--- a/VisualSVN-Agent/config.json
+++ b/VisualSVN-Agent/config.json
@@ -1,16 +1,17 @@
 ﻿{
   "Repositories": {
-    "path": "C:\\Repositories"
+    "path": "C:\\Repositories",
+    "SitePrefix": "https://salt-minion-2008-2/svn/"
   },
   "APIConfig": {
     "APIurl": "http://192.168.72.60:5000/svn_agent",
     "IV": "zxcvbnmdfrasdfgh",
     "SecretKey": "dofkrfaosrdedofkrfaosrdedofkrfao"
   },
-  "ID": "test",
+  "ID": "192.168.72.68",
   "SVNAccount": {
-    "UserName": "",
-    "Password": ""
+    "UserName": "admin",
+    "Password": "admin"
   }
 
 }
