--- a/VisualSVN-Agent/config.json
+++ b/VisualSVN-Agent/config.json
@@ -4,8 +4,8 @@
     "SitePrefix": "https://salt-minion-2008-2/svn/"
   },
   "APIConfig": {
-    "APIurl": "http://localhost:12980/Services/SVNAccount.asmx/svn_agent",
-    "CMDurl": "http://localhost:12980/Services/SVNAccount.asmx/cmd",
+    "APIurl": "http://192.168.74.1/Services/SVNAccount.asmx/svn_agent",
+    "CMDurl": "http://192.168.74.1/Services/SVNAccount.asmx/cmd",
     "IV": "zxcvbnmdfrasdfgh",
     "SecretKey": "dofkrfaosrdedofkrfaosrdedofkrfao"
   },
